# sigma-FE

./: .gitignore  README.md  main.py  pubspec.yaml  pyproject.toml
.claude/: settings.local.json
lib/: main.dart
lib/constants/: app_constants.dart
lib/mixins/: camera_mixin.dart
lib/providers/: auth_provider.dart  face_provider.dart  settings_provider.dart
lib/routes/: app_routes.dart
lib/screens/: confirmation_dialog_screen.dart  control_screen.dart  face_enrollment_screen.dart  face_registration_screen.dart  login_loading_screen.dart  login_screen.dart  main_dashboard_screen.dart  overlay_screen.dart  settings_screen.dart  tracking_screen.dart
lib/services/: api_client.dart  app_lifecycle_manager.dart  auth_storage_service.dart  camera_manager.dart  env_service.dart  face_auth_service.dart  face_service.dart  google_auth_service.dart  python_service.dart  settings_service.dart  user_service.dart
lib/themes/: app_theme.dart
lib/utils/: error_handler.dart  gesture_mapping.dart  logger.dart
lib/widgets/: camera_preview_widget.dart  common_button.dart  control_buttons.dart  error_widget.dart  face_guide_overlay.dart  loading_overlay.dart  logout_button.dart  safe_image_asset.dart  safe_network_image.dart  (+2 more)
python/: audio_recorder.py  command_executor.py  config.py  cursor_controller.py  gesture_detector.py  gesture_recognizer.py  hand_overlay.py  hand_tracking_standalone.py  mouse_controller.py  pyqt_main.py  requirements.txt  settings_client.py  simple_overlay.py  thumb_gesture_recognizer.py
test/: widget_test.dart
windows/: CMakeLists.txt
(+4 files in other folders)
