[project]
name = "sigma-fe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe==0.10.9",
    "opencv-python-headless>=4.11.0.86",
    "pyautogui>=0.9.54",
    "pyqt6>=6.9.1",
    "websocket-client>=1.6.4",
    "sounddevice>=0.4.6",
    "numpy>=1.24.3",
    "pyperclip>=1.8.2",
    "requests>=2.32.4",
]
